# packetmill

./: .gitignore  CITATION.cff  LICENSE  README.md  llvm-clang.sh  setup_repo.sh
LLVM/: CMakeLists.txt
LLVM/class-handpick-pass/: CMakeLists.txt  ClassHandpick.cpp
LLVM/class-pool-inline-pass/: CMakeLists.txt  ClassPoolInline.cpp
LLVM/class-stripmoduleflags-pass/: CMakeLists.txt  ClassStripModuleFlags.cpp
LLVM/class-xchg-inline-pass/: CMakeLists.txt  ClassXCHGInline.cpp
experiments/: Makefile  README.md  packetmill.npf
experiments/cluster/: client-100G.node  client2-100G.node  dut-100G.node
experiments/packetmill.d/: bess.npf  fastclick.npf  freq.npf  l2fwd.npf  vpp.npf
experiments/repo/: bess-no-vec.repo  bess.repo  packetmill-clang-cpy-bolt.repo  packetmill-clang-cpy-pgo-profile.repo  packetmill-clang-cpy-pgo.repo  packetmill-clang-cpy-stripped.repo  packetmill-clang-cpy.repo  packetmill-clang-flto-cpy.repo  packetmill-clang-flto-inside.repo  packetmill-clang-flto-ovrly.repo  packetmill-clang-flto-xchg-inlined-allanno.repo  packetmill-clang-flto-xchg-no-pool.repo  packetmill-clang-flto-xchg-stripped.repo  packetmill-clang-flto-xchg.repo  packetmill-clang-ovrly-stripped.repo  packetmill.repo  vpp-no-vec.repo  vpp.repo
paper-results/: README.md
paper-results/dual_NIC_fwd/: plot.gp  transpose.sh
paper-results/lto_router/: plot.gp  transpose.sh
paper-results/packetmill_ids/: plot.gp
paper-results/packetmill_nat/: plot.gp  transpose.sh
paper-results/packetmill_router_rate/: Makefile  plot.gp  transpose.sh
paper-results/source_code_router/: plot.gp  (+1 more)
(+1212 files in other folders)
